@@ -1,10 +1,16 @@
 $Rev$
+[2007/09/21]
+mHelp.py            Fix webbrowser bug. Thanks Tom Eubank
+                    remove finddialog.xrc and finddialog_zh_CN.xrc
+
+[2007/09/20]
+FindReplaceDialog.py Removed replaced with FindReplace.py and refactor find and replace
+
 [2007/09/19]
 SvnSupport.py       Fix svn_plugin crash in Linux
 common.py           Add get_config_file_obj() function, and change the invoke.
 PrefDialog.py dict4ini.py
                     Add config.ini support in Preference Dialog
-FindReplaceDialog.py Removed replaced with FindReplace.py and refactor find and replace
 
 [2007/09/17]
 FindInFiles.py DirBrowser.py
